# TorXakis

./: .appveyor.yml  .codeclimate.yml  .dir-locals.el  .gitattributes  .gitignore  .torxakis.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HaskellInTheLarge.txt  OnError.txt  README.md  TorXakisGrammar.txt  copyright.txt  file  hist.txt  stack.yaml  stack_linux.yaml  stack_windows.yaml  updateAndPushGhPages.sh
sys/behave/: behave.cabal  stack.yaml
sys/behave/src/: Behave.hs  Equiv.hs  Expand.hs  Next.hs  Primer.hs  Reduce.hs  SBehave.hs  SEquiv.hs  SExpand.hs  SNext.hs  StautDef.hs  Subst.hs  Unfold.hs
sys/behave/test/: TestBExpr.hs  TestFuncContent.hs  TestHelperFuncContent.hs  TestMain.hs  TestProcessBehaviour.hs
sys/behaveenv/: Setup.hs  behaveenv.cabal  stack.yaml
sys/behaveenv/src/: EnvBTree.hs  EnvSTree.hs
sys/bexpr/: bexpr.cabal
sys/bexpr/src/: BehExprDefs.hs  ChanId.hs  ProcDef.hs  ProcId.hs  Relabel.hs  StatId.hs  StautDef.hs  Subst.hs  VarEnv.hs
sys/bexpr/test/: TestBehExprDefs.hs
sys/cnect/: cnect.cabal
sys/cnect/src/: EnDecode.hs  SockConnect.hs  SockExplW.hs  SockImplW.hs  SocketWorld.hs
sys/core/: core.cabal  stack.yaml
sys/core/src/: BuildInfo.hs  Cnect.hs  CoreUtils.hs  EnDecode.hs  Ioco.hs  Mapper.hs  Purpose.hs  ServerIf.hs  Sim.hs  Step.hs  Test.hs  Trace.hs  TxsConfig.hs  TxsCore.hs  TxsCoreShow.hs  TxsGen.hs  TxsManual.hs  TxsSim.hs  TxsStep.hs  TxsStepper.hs  TxsTest.hs  TxsTransform.hs  TxsValue.hs  VersionInfo.hs  tt
sys/coreenv/: coreenv.cabal  stack.yaml
sys/coreenv/src/: Config.hs  EnvBasic.hs  EnvCore.hs  EnvData.hs  ParamCore.hs
sys/defs/: defs.cabal
sys/defs/src/: BehExprDefs.hs  BopPolynomial.hs  ChanId.hs  CnectDef.hs  CnectId.hs  ConnectionDefs.hs  ConstDefs.hs  CstrDef.hs  CstrId.hs  FreeMonoidX.hs  FuncDef.hs  FuncId.hs  FuncTable.hs  GoalId.hs  Ident.hs  MapperDef.hs  MapperId.hs  ModelDef.hs  ModelId.hs  Name.hs  NoId.hs  PShow.hs  Params.hs  ProcDef.hs  ProcId.hs  Product.hs  PurpDef.hs  PurpId.hs  RegexXSD2Posix.y  Sigs.hs  SortDef.hs  SortId.hs  SortOf.hs  StatId.hs  StdTDefs.hs  Sum.hs  TxsDDefs.hs  TxsDef.hs  TxsDefs.hs  TxsShow.hs  (+8 more)
sys/defs/test/: BehExprDefsSpec.hs  BopPolynomialSpec.hs  FreeMonoidXSpec.hs  GenProduct.hs  GenSum.hs  ProductSpec.hs  Spec.hs  SumSpec.hs  TestBehExprDefs.hs  TestMain.hs  TestMainBlackBox.hs  TestProduct.hs  TestSum.hs  ValExprSpec.hs  XSD2PosixSpec.hs
sys/front/: front.cabal  stack.yaml
sys/front/src/: ShowToken.hs  Sigs.hs  TxsAlex.x  TxsHappy.y
sys/front/test/: Main.hs
sys/lexregexxsd/: lexregexxsd.cabal
sys/lexregexxsd/src/: RegexAlex.x
sys/lpe/: Setup.hs  lpe.cabal
sys/lpe/src/: GNF.hs  LPE.hs  LPEHelpers.hs  LPEPar.hs  LPEfunc.hs  PreGNF.hs  TranslatedProcDefs.hs
sys/lpe/test/: TestDefinitions.hs  TestGNF.hs  TestLPE.hs  TestLPEHelpers.hs  TestLPEHide.hs  TestLPEInterrupt.hs  TestLPEPar.hs  TestMain.hs  TestPreGNF.hs  TestPreGNFDisable.hs  TestPreGNFEnable.hs
sys/lpeops/: README.md  lpeops.cabal
sys/lpeops/results/: README.md  determinism.csv
sys/lpeops/src/: LPE2MCRL2.hs  LPEAngelic.hs  LPEClean.hs  LPEConfCheck.hs  LPEConstElm.hs  LPEDataReset.hs  LPEDeterminize.hs  LPEIStepElm.hs  LPEInfo.hs  LPEIsDet.hs  LPEParElm.hs  LPEParReset.hs  LPEStepper.hs  LPEStepper2.hs  LPEUGuards.hs
sys/lpeops/test/: TestClean.hs  TestConfCheck.hs  TestConstElm.hs  TestDataReset.hs  TestMain.hs  TestParElm.hs  TestParReset.hs  TestUGuard.hs  TestUtils.hs
sys/lpeq/: README.md  lpeq.cabal
sys/lpeq/src/: LPEQ.hs
sys/lpeutils/: lpeutils.cabal
sys/lpeutils/src/: ActOfferFactory.hs  ChanFactory.hs  ConcatEither.hs  IntercalateMap.hs  KnuthShuffle.hs  MapDebug.hs  ModelIdFactory.hs  MonadAny.hs  Pairs.hs  ProcIdFactory.hs  SetUnions.hs  SortFactory.hs  UntilFixedPoint.hs  ValFactory.hs  VarFactory.hs
sys/regexrepr/: regexrepr.cabal
sys/regexrepr/src/: RegexPosixHappy.y  RegexRepr.hs
sys/regexrepr/test/: TestMain.hs  TestXsd2Posix.hs  TestXsd2Smt.hs
sys/sbehave/: sbehave.cabal
sys/sbehave/src/: Equiv.hs  Next.hs  Reduce.hs  SBehave.hs  SExpand.hs  Unfold.hs
sys/sbehavedefs/: sbehavedefs.cabal
sys/sbehavedefs/src/: STShow.hs  STree.hs
sys/sbehaveenv/: sbehaveenv.cabal
sys/sbehaveenv/src/: EnvSTree.hs
sys/server/: server.cabal  stack.yaml
sys/server/src/: .TxsServer.hs.swp  CmdLineParser.hs  ToProcdef.hs  TxsServer.hs  TxsServerConfig.hs
sys/server/test/: CmdLineParserSpec.hs  Spec.hs
sys/serverenv/: license.txt  serverenv.cabal  stack.yaml
sys/serverenv/src/: EnvServer.hs  IfServer.hs  ParamServer.hs
sys/solve/: solve.cabal  stack.yaml
sys/solve/src/: CallGraph.hs  FreeVar.hs  RandIncrementBins.hs  RandIncrementChoice.hs  RandPartition.hs  RandTrueBins.hs  RegexSMTHappy.y  RegexXSDtoSMT.hs  SMT.hs  SMT2TXS.hs  SMTAlex.x  SMTData.hs  SMTHappy.y  SMTInternal.hs  SMTString.hs  SMTStringAlex.x  SMTStringHappy.y  Solve.hs  SolveDefs.hs  SolveRandParam.hs  TXS2SMT.hs
sys/solve/test/: HelperFuncDefToSMT.hs  HelperToSMT.hs  HelperVexprToSMT.hs  TestConstraint.hs  TestExternal.hs  TestFuncDefToSMT.hs  TestMainBlackBox.hs  TestMainWhiteBox.hs  TestMultipleInstances.hs  TestPushPop.hs  TestRecursiveFunction.hs  TestRegexSMT.hs  TestSMTCount.hs  TestSMTValue.hs  TestSolvers.hs  TestSortDefToSMT.hs  TestVexprToSMT.hs  TestXSD2SMT.hs
sys/solvedefs/: solvedefs.cabal  stack.yaml
sys/solvedefs/src/: SMTData.hs  SolveDefs.hs
sys/sort/: package.yaml  sort.cabal
sys/sort/src/: ADTExp.hs  Id.hs  Identifier.hs  Name.hs  Ref.hs  Sort.hs  SortInternal.hs  SortOf.hs
sys/sort/test/: TestADT.hs  TestADTDefs.hs  TestConstructorDefs.hs  TestFieldDefs.hs  TestMain.hs
sys/testsel/: testsel.cabal
sys/testsel/src/: NComp.hs
sys/tree/: tree.cabal
sys/tree/src/: TreeMonad.hs  TreeZipper.hs
sys/ui/: stack.yaml  ui.cabal
sys/ui/src/: UI.hs  (+5 more)
sys/valexpr/: valexpr.cabal
sys/value/: stack.yaml  value.cabal
test/environment/: TestMain.hs  TestPreludeRead.hs  TestTextXMLExpatTree.hs  environment.cabal  stack.yaml
test/sqatt/: README.md  lts11.5.csv  sqatt.cabal  stack.yaml  stack_appveyor.yaml  stack_linux.yaml
(+1174 files in other folders)
