name:                   behave
version:                0.2.1.0
synopsis:               Behaviour Expressions for TorXakis
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:          
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      Equiv
                      , Expand
                      , Next
                      , Primer
                      , Reduce
                      , Subst
                      , Unfold


  ghc-options:         -O2 -optc-O3 -optc-ffast-math
  
  build-depends:        base
                      , containers
                      , mtl
                      , MissingH
                      
                      , behavedefs
                      , defs
                      , env
                      , solve
                      , solvedefs
                      , value
                      
  default-language:     Haskell2010
  
test-suite behave-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  
  main-is:              TestMain.hs
  
  other-modules:        TestBExpr
                      , TestFuncContent
                      , TestHelperFuncContent
                      , TestProcessBehaviour
                      

  ghc-options:         -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N
  
  build-depends:       array
                     , base
                     , bytestring
                     , containers
                     , mtl
                     , HUnit
                     , MissingH
                     
                     , defs
                     , behave
                     , behavedefs
                     , env
                     , front
                     
  default-language:    Haskell2010