name:                   behave
version:                0.2.1.0
synopsis:               Behaviour Expressions for TorXakis
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:          
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      Behave
                      , Expand

  other-modules:        Equiv
                      , Next
                      , Reduce
                      , Unfold

  ghc-options:        -Wall -Werror -O2 -optc-O3 -optc-ffast-math
  
  build-depends:        base
                      , containers
                      , extra
                      , mtl
                      , text

                      , behavedefs
                      , behaveenv
                      , bexpr
                      , coreenv
                      , defs
                      , solve
                      , valexpr
                      , value


  default-language:     Haskell2010
  
test-suite behave-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       src
                      , test
  
  main-is:              TestMain.hs
  
  other-modules:        Equiv
                      , Expand
                      , Next
                      , Reduce
                      , Unfold
                      , TestBExpr
                      , TestFuncContent
                      , TestHelperFuncContent
                      , TestProcessBehaviour

  ghc-options:       -Wall -Werror -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=100000000
  
  build-depends:       base
                     , containers
                     , extra
                     , mtl
                     , text
                     , HUnit
                     , MissingH
                     
                     , behavedefs
                     , behaveenv
                     , bexpr
                     , coreenv
                     , defs                     
                     , solve
                     , txs-compiler
                     , valexpr
                     , value
                     
  default-language:    Haskell2010
