name:                   behaveenv
version:                0.1.7.0
synopsis:               Behaviour Expressions for TorXakis
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:          
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:
                        EnvBTree

  ghc-options:         -Werror -O2 -optc-O3 -optc-ffast-math

  build-depends:        base
                      , containers
                      , mtl

                      , coreenv
                      , defs
                      , solvedefs
                      
  default-language:     Haskell2010
