name:                   cnect
version:                0.1.7.0
synopsis:               Connections for TorXakis
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:
                        SockExplW
                        SockImplW
  other-modules:
                        EnDecode
                        SockConnect

  ghc-options:         -Werror -O2 -optc-O3 -optc-ffast-math -Wall

  build-depends:        async
                      , base
                      , containers
                      , mtl
                      , process
                      , text
                      , MissingH

                      , text-via-sockets

                      , core
                      , coreenv
                      , defs
                      , serverenv
                      , valexpr

  default-language:     Haskell2010
