name:                   core
version:                0.2.1.0
synopsis:               Core of TorXakis
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:          
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      Sim
                      , ServerIf
                      , Cnect
                      , EnDecode
                      , Step
                      , Test
                      , BuildInfo
                      , VersionInfo
                      
  ghc-options:         -O2 -optc-O3 -optc-ffast-math
  
  build-depends:        base
                      , containers
                      , mtl
                      , network
    -- for ServerIf
                      , random

                      , behave
                      , behavedefs
                      , defs
                      , env
                      , solve
                      , solvedefs
                      , value
    -- for EnDecode
                      
  default-language:     Haskell2010
