name:                   core
version:                0.2.1.0
synopsis:               Core of TorXakis
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:          
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      TxsCore
                      , CoreUtils
                      , BuildInfo
                      , VersionInfo

  other-modules:        Ioco
                      , Mapper
                      , Purpose
                      , Sim
                      , Step
                      , Test
                      
  ghc-options:         -Werror -O2 -optc-O3 -optc-ffast-math -Wall
  
  build-depends:        base
                      , containers
                      , mtl
                      , random
                      , text

                      , behavedefs
                      , behaveenv
                      , behave
                      , coreenv
                      , defs
                      , solve
                      , solvedefs
                      , testsel
                      , value
                      
  default-language:     Haskell2010
