name:                   coreenv
version:                0.1.7.0
synopsis:               CoreEnv of TorXakis
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:          
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      EnvCore
                      , EnvData
                      , ParamCore
                      , Config
                      
  ghc-options:         -Werror -O2 -optc-O3 -optc-ffast-math -Wall
  
  build-depends:        base
                      , containers
                      , mtl
                      , process

                      , behavedefs
                      , defs
                      , solvedefs
                      
  default-language:     Haskell2010
