name:                   defs
version:                0.2.1.0
synopsis:               Definitions for TorXakis
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:          
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      ChanId
                      , CnectId
                      , FuncTable
                      , GoalId
                      , Ident
                      , MapperId
                      , ModelId
                      , Params
                      , ProcId
                      , PurpId
                      , Sigs
                      , StatId
                      , StdTDefs
                      , TxsDDefs
                      , TxsDef
                      , TxsDefs
                      , TxsShow
                      , TxsUtils
                      , Utils
                      , XmlFormat

  other-modules:        BehExprDefs
                      , ConnectionDefs
                      , CnectDef
                      , MapperDef
                      , ModelDef
                      , ProcDef
                      , PurpDef
                      , VarEnv


  ghc-options:         -Werror -Wall -O2 -optc-O3 -optc-ffast-math -Wall
  
  build-tools:          happy
  
  build-depends:        base
                      , bytestring
                      , containers
                      , deepseq
                      , hexpat
                      , mtl
                      , text
                      , MissingH

                      , sort
                      , text-via-sockets
                      , valexpr

  default-language:     Haskell2010
