name:                   defs
version:                0.2.2.0
synopsis:               Definitions for TorXakis
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      BehExprDefs
                      , TxsDDefs
                      , TxsDefs
                      , TxsShow
                      , TxsUtils
                      , StdTDefs
                      , Utils
                      , XmlFormat
                      , ChanId
                      , CnectId
                      , GoalId
                      , MapperId
                      , ModelId
                      , ProcId
                      , PurpId
                      , StatId
                      , FuncTable
                      , Sigs

  other-modules:        ConnectionDefs
                      , Ident
                      , TxsDef
                      , CnectDef
                      , MapperDef
                      , ModelDef
                      , ProcDef
                      , PurpDef
                      , VarEnv


  ghc-options:         -Wall -Werror -O2 -optc-O3 -optc-ffast-math

  build-tools:          happy
  build-depends:        array
                      , base
                      , bytestring
                      , containers
                      , deepseq
                      , hexpat
                      , mtl
                      , text
                      , MissingH
                      , lexregexxsd
                      , text-via-sockets
                      , valexpr
  default-language:     Haskell2010
  
test-suite defs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     
  main-is:             TestMain.hs
  
  other-modules:       TestBehExprDefs
  
  ghc-options:         -Werror -Wall -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N                     
  
  build-depends:       base
                     , containers
                     , QuickCheck
                     , text
                     , defs
                     , valexpr

  default-language:    Haskell2010  
