name:                   defs
version:                0.2.2.0
synopsis:               Definitions for TorXakis
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      TxsDDefs
                      , TxsDefs
                      , TxsShow
                      , TxsUtils
                      , StdTDefs
                      , Utils
                      , XmlFormat
                      , CnectId
                      , GoalId
                      , MapperId
                      , ModelId
                      , PurpId
                      , FuncTable
                      , Sigs

  other-modules:        ConnectionDefs
                      , Ident
                      , TxsDef
                      , CnectDef
                      , MapperDef
                      , ModelDef
                      , PurpDef

  ghc-options:         -Wall -Werror -O2 -optc-O3 -optc-ffast-math

  build-depends:        base
                      , bytestring
                      , containers
                      , deepseq
                      , hexpat
                      , mtl
                      , multiset
                      , text
                      , MissingH
                      , text-via-sockets
                      , bexpr
                      , valexpr
                      
  default-language:     Haskell2010