name:                   front
version:                0.2.1.0
synopsis:               Lexer and Parser for TorXakis
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:          
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      TxsAlex
                      , TxsHappy
  
  other-modules:        Sigs

  ghc-options:         -O2 -optc-O3 -optc-ffast-math
  
                                            -- add -fglasgow-exts 
                                            -- see https://www.haskell.org/happy/doc/html/sec-tips.html
  build-tools:          alex
                      , happy
  
  -- add                happy-options:        -a -g -c            
  -- see https://www.haskell.org/happy/doc/html/sec-tips.html
  -- and https://groups.google.com/forum/#!topic/haskell-stack/9oKeSo-nz7U
                      
  build-depends:        array
                      , base
                      , containers
                      , defs
                      
  default-language:     Haskell2010
  
test-suite TorXakisFront-BlackBox
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
                                            
  main-is:              Main.hs
  
  ghc-options:         -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N
  
  build-depends:        array
                      , base
                      , containers
                      , MissingH
                      , QuickCheck
                      , defs
                      , front
                      
  default-language:     Haskell2010