name:                   front
version:                0.2.1.0
synopsis:               Lexer and Parser for TorXakis
license:                BSD3
license-file:           license.txt
author:                 Jan Tretmans
                      , Pierre van de Laar
maintainer:          
                      , pierre.vandelaar@tno.nl
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      TxsAlex
                      , TxsHappy
  
  ghc-options:         -Werror -Wall -O0 -optc-O3 -optc-ffast-math
  
  build-tools:          alex
                      , happy
  -- Flags `-a -g -c` are passed by default to happy when building with Cabal. 
  -- see https://stackoverflow.com/q/21100762/2289983
                      
  build-depends:        array
                      , base
                      , containers
                      , MissingH
                      , text

                      , defs
                      , valexpr

  default-language:     Haskell2010

test-suite TorXakisFront-BlackBox
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test

  main-is:              Main.hs
  
  ghc-options:         -Werror -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N
  
  build-depends:        base
                      , containers
                      , MissingH
                      , QuickCheck
                      , defs
                      , text
                      
                      , front
                      , valexpr

  default-language:     Haskell2010